--- a/src/ParserOfPsychologists.WinFormsUI/ParserOfPsychologists.WinFormsUI.csproj
+++ b/src/ParserOfPsychologists.WinFormsUI/ParserOfPsychologists.WinFormsUI.csproj
@@ -6,7 +6,16 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Image\icon.ico</ApplicationIcon>
+    <Authors>SHILY</Authors>
+    <Company>SHILY PROJECT</Company>
+    <Product>Parser Of Psychologists</Product>
+    <Version>0.7.5</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Image\icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
@@ -16,6 +25,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ParserOfPsychologists.Application\ParserOfPsychologists.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
