--- a/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
+++ b/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
