-Добавлен паблиш скрипт

--- a/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
+++ b/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
@@ -7,6 +7,7 @@
     <Company>SHILY PROJECT</Company>
     <Authors>SHILY</Authors>
     <Product>Parser Of Psychologists</Product>
+	<IsPublishable>false</IsPublishable>
   </PropertyGroup>
 
   <ItemGroup>
