--- a/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
+++ b/src/ParserOfPsychologists.Application/ParserOfPsychologists.Application.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
